--- a/templates/stock.html
+++ b/templates/stock.html
@@ -67,7 +67,7 @@
           <tr>
               <th>Circulating Supply</th>
               <td>{{ info.circulatingsupply or 19000000 }}</td>
-              <td><"The total supply of an asset that are actively available for trade and are being used in the market and in general public."</td>
+              <td>"The total supply of an asset that are actively available for trade and are being used in the market and in general public."</td>
           </tr>
           <tr>
               <th>Current Price</th>
